# vstreamer-tool

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  THIRD_PARTY_NOTICES.md  config.json.example  config.py  config.toml.example  logger.py  main.py  poe_tasks.toml  pyproject.toml  pyrightconfig.json  requirements-pod.txt
.claude/skills/code-metrics/: SKILL.md
.claude/skills/startup-profile/: SKILL.md
.github/workflows/: codeql.yml
docker/: readme.md
docs/: follow-ups.md  secret-scanning.md
docs/adr/: 0001-upgrade-voicevox-core-0-16.md  0002-migrate-to-pydantic-v2-native.md  0003-secretstr-json-via-field-serializer.md  0004-per-destination-sender-transport.md  0005-true-e2e-in-process-telemetry.md  0006-clock-skew-threshold-warning.md  0007-per-request-jsonl-telemetry.md  0008-code-metrics-two-lens.md  0009-code-metrics-advisory-only.md  0010-python-health-on-demand-skill.md  0011-python-health-triage-hybrid.md  0012-adopt-ty-type-checker.md  0013-skills-at-user-level.md  0014-relocate-skills-to-project.md  0015-startup-profiler-py-spy.md  0016-change-voice-decompose-seeded-golden.md  0017-rvc-input-envelope-shape-transfer.md  0018-rvc-envelope-duck-only.md  0019-vc-silero-vad-gate.md  0020-silero-vad-v6.md  0021-hubert-drop-fairseq.md  0022-hubert-onnx-runtime.md  0023-hubert-equivalence-gate.md  0024-onnx-session-single-factory.md  0025-target-python-314-phased.md  0026-adopt-numpy-2.md  0027-cap-onnxruntime-cuda12.md  0028-migrate-to-cuda-13.md  0029-audioop-lts.md  0030-pyworld-lazy-default-rmvpe.md  0031-audio-pyaudio-to-sounddevice.md  0032-gui-multi-pipeline-rewrite.md  0033-gui-manifest-versioning.md  0034-gui-corrupt-file-resilience.md  0035-bound-sender-reconnect-backoff.md  0036-whisper-resample-via-pyav.md  0037-transcription-vad-skip-gate.md  0038-worker-config-preflight-fail-loud.md  0039-whisper-hosts-need-cuda12-toolkit.md  0040-subtitle-obs-backend-via-worker-type.md  (+19 more)
docs/superpowers/plans/: 2026-06-14-pydantic-v2-migration.md  2026-06-14-sender-per-destination-transport.md  2026-06-14-voicevox-core-0.16-upgrade.md  2026-06-23-per-request-jsonl-telemetry.md  2026-06-23-perf-telemetry.md  2026-06-24-code-metrics-skill.md  2026-06-24-python-health-skill.md  2026-06-25-change-voice-refactor.md  2026-07-04-rvc-input-envelope.md  2026-07-08-vc-vad-noise-gate.md  2026-07-08-vc-vad-v6-migration.md  2026-07-09-rvc-hubert-fairseq-free.md  2026-07-10-rvc-hubert-onnx.md  2026-07-12-gui-multi-pipeline-rewrite.md  2026-07-16-subtitle-obs-websocket-backend.md  2026-07-16-transcription-vad-skip-gate.md  2026-07-16-worker-config-preflight.md  2026-07-17-gui-run-readiness.md  2026-07-21-fcpe-f0-extractor.md  2026-07-22-external-model-setup-from-poe.md  2026-07-23-rvc-streaming-vc-m1-rtf-harness.md  2026-07-23-rvc-streaming-vc-m2-single-machine.md  2026-07-24-rvc-streaming-vc-m3-two-machine.md  2026-07-24-streaming-input-envelope-follow.md
docs/superpowers/specs/: 2026-06-14-pydantic-v2-migration-design.md  2026-06-14-sender-per-destination-transport-design.md  2026-06-14-voicevox-core-0.16-upgrade-design.md  2026-06-23-per-request-jsonl-telemetry-design.md  (+20 more)
gui/: __main__.py  app.py  autocomplete_combobox.py  config_paths.py  dialogs.py  dummy_param.py  form.py  gui.py  migration.py  paths.py  pipeline_editor.py  ports.py  process.py  profile.py  rawedit.py  readiness.py  readiness_panel.py  recipes.py  shared_dialog.py  shared_paths.py  widgets.py
scripts/: capture_change_voice_golden.py  convert_hubert.py  export_fcpe_onnx.py  export_hubert_onnx.py  hubert_keymap.py  hubert_metrics.py  metrics.py  setup_models.py  startup_analyze.py  startup_capture.py  stream_vc_rtf.py
scripts/fixtures/: baseline_startup.toml  minimal_startup.toml
scripts/tests/: test_metrics.py  test_setup_models.py  test_startup_analyze.py  test_startup_capture.py
tests/: test_change_voice_golden.py  test_config_bounds.py  test_config_fcpe.py  test_config_secret.py  test_config_stream_vc.py  test_device_resolver.py  test_event_chains.py  test_fcpe_onnx.py  test_forbidden_imports.py  test_gcp_auth_retry.py  test_gcp_credentials.py  test_gui_readiness.py  test_gui_shared_paths.py  test_hubert_equivalence.py  test_hubert_export.py  test_hubert_keymap.py  test_hubert_metrics.py  test_hubert_runtime.py  test_logger_resilience.py  test_main.py  test_no_fairseq_import.py  test_obs_text_settings.py  test_obs_ws.py  test_onnx_session.py  test_pitch_extract.py  test_playback_e2e.py  test_preflight.py  test_recording_metrics.py  test_recording_trace.py  test_rvc_helpers.py  test_sender.py  test_shutdown_summary.py  test_stream_vc.py  test_stream_vc_capture.py  test_stream_vc_config.py  test_stream_vc_consumer.py  test_stream_vc_entrypoint.py  test_stream_vc_envelope.py  test_stream_vc_gate.py  test_stream_vc_jitter.py  (+34 more)
tests/gui/: test_migration.py  test_paths.py  test_ports.py  test_process.py  test_profile.py  test_recipes.py
tools/code_metrics/: SKILL.md
tools/python_health/: SKILL.md
typings/mozcpy/: __init__.py
typings/pyvcroid2/: __init__.pyi  pyvcroid2.pyi
typings/whisper/: __init__.pyi
vspeech/: __main__.py  ami.py  audio.py  broker.py  comm.py  config.py  exceptions.py  gcp.py  logger.py  main.py  playback.py  preflight.py  receiver.py  recording.py  sender.py  shared_context.py  speech.py  subtitle.py  transcription.py  translation.py  transliterate.py  voiceroid.py  voicevox.py
vspeech/gui/: __main__.py  autocomplete_combobox.py  gui.py
vspeech/lib/: ami.py  audio.py  command.py  cuda_util.py  gcp.py  obs_text_settings.py  obs_ws.py  onnx_session.py  pitch_extract.py  rvc.py  stream_vc.py  subtitle_state.py  telemetry.py  vad.py  voiceroid.py  voicevox.py
vspeech/stream_vc/: capture.py  consumer.py  envelope.py  gate.py  jitter.py  packet.py  playback.py  retry.py  runner.py  subsystem.py  transport.py  udp.py  wire.py
vspeech/worker/: playback.py  receiver.py  recording.py  sender.py  subtitle.py  subtitle_obs.py  subtitle_tk.py  transcription.py  translation.py  tts.py  vc.py
(+22 files in other folders)
