[project]
name = "voicerecog"
version = "0.1.0"
description = ""
authors = [{ name = "sondeko", email = "sondeko143@gmail.com" }]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "google-cloud-translate>=3.11.1,<4",
    "httpx>=0.28.0,<0.29.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "aiofiles>=23.1.0,<24",
    "pyhumps>=3.8.0,<4",
    "google-cloud-speech>=2.19.0,<3",
    "toml>=0.10.2,<0.11",
    "click>=8.1.3,<9",
    "vstreamer-protos",
    "colorlog>=6.7.0,<7",
    "emoji>=2.6.0,<3",
    "ctranslate2>=4.6.1,<5",
]

[project.optional-dependencies]
voicevox = ["voicevox-core ; sys_platform == 'win32'"]
whisper = [
    "faster-whisper==1.2.1",
    "torch ; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.24.4,<2",
    "numpy>=1.23,<2",
]
rvc = [
    "torch ; sys_platform == 'win32'",
    "transformers>=4.44,<5",
    "pyworld>=0.3.3,<0.4",
    "faiss-cpu>=1.7.2,<2 ; sys_platform == 'win32'",
    "onnxruntime-gpu>=1.24.4,<2",
    "torchaudio ; sys_platform == 'win32'",
    "numpy>=1.23,<2",
    "scipy>=1.10.1,<2",
]
mozc = ["mozcpy>=0.1.1,<0.2"]
# HuBERT 変換ツール専用（scripts/convert_hubert.py）。runtime には含めない。
# fairseq 0.12.2 は numpy>=1.24 で撤去された旧エイリアスを使うため <1.24 を保持する。
# uv は 1 環境に numpy を 1 版しか解決しないので、rvc とは別の使い捨て 3.11 環境で使うこと。
convert = [
    "fairseq ; sys_platform == 'win32'",
    "torch ; sys_platform == 'win32'",
    "torchaudio ; sys_platform == 'win32'",
    "transformers>=4.44,<5",
    "numpy>=1.18,<1.24",
]
vroid2 = ["pyvcroid2 ; sys_platform == 'win32'"]
audio = ["PyAudio>=0.2.13,<0.3"]
gui = [
    "ttkbootstrap>=1.10.1,<2",
    "pillow>=12.1.1,<13",
]

[project.urls]
Repository = "https://github.com/sondeko143/vstreamer-tool"

[project.scripts]
vspeech = "vspeech.main:cmd"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "docutils>=0.19,<0.20",
    "pytest-cov>=6.0.0,<8",
    "pytest-grpc>=0.8.0,<0.9",
    "pytest-asyncio>=1.0,<2",
    "pytest-httpx",
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "poethepoet>=0.46.0",
    "beniget>=0.5.0",
    "onnx>=1.19,<2",
]

[tool.uv]
default-groups = "all"
# voicevox-core / torch / torchaudio / fairseq / pyvcroid2 are Windows-only wheels,
# and onnxruntime-gpu has no macOS wheel. Restrict resolution to the platforms this
# project actually targets (Windows for dev, Linux for the Docker image).
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]
# faster-whisper depends on the CPU `onnxruntime`, which shares the same `onnxruntime`
# module with `onnxruntime-gpu` and clobbers its CUDA-enabled binary when both are
# installed. Drop the CPU build entirely; `onnxruntime-gpu` (in the whisper/rvc extras)
# provides the `onnxruntime` module that faster-whisper imports.
override-dependencies = ["onnxruntime ; sys_platform == 'never'"]

[tool.uv.sources]
vstreamer-protos = { url = "https://github.com/sondeko143/vstreamer-protos/releases/download/v0.1.1/vstreamer_protos-0.1.1-py3-none-any.whl" }
voicevox-core = { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-win_amd64.whl" }
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.10.0%2Bcu128-cp311-cp311-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu128/torchaudio-2.10.0%2Bcu128-cp311-cp311-win_amd64.whl" }
fairseq = { url = "https://github.com/sondeko143/fairseq-311/releases/download/v0.12.2.post1/fairseq-0.12.2.post1-cp311-cp311-win_amd64.whl" }
pyvcroid2 = { git = "https://github.com/Nkyoku/pyvcroid2" }

[tool.uv.build-backend]
module-name = ["vspeech"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"
addopts = "-m 'not voicevox_e2e'"
markers = [
    "voicevox_e2e: VOICEVOX 実合成 E2E（実行時資産が必要。通常実行では除外）",
]

[tool.ty.environment]
python-version = "3.11"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

# Health gates, run via poethepoet. The `python-health` skill drives these:
#   uv run poe check   → run every gate report-only (keeps going on failure)
#   uv run poe fix     → apply only the mechanical fixes (ruff format + safe lint)
# On GPU/ML projects, prefix with extras so ty/pytest resolve optional backends:
#   uv run --all-extras poe check
[tool.poe.tasks]
fmt = { cmd = "ruff format .", help = "Apply ruff formatting" }
fmt-check = { cmd = "ruff format --check .", help = "Check formatting (no writes)" }
lint = { cmd = "ruff check .", help = "Lint (no writes)" }
lint-fix = { cmd = "ruff check --fix .", help = "Apply safe lint fixes" }
type = { cmd = "ty check", help = "Type-check (ty)" }
test = { cmd = "pytest --cov=vspeech --cov-report=term-missing", help = "Tests + coverage (honors addopts)" }
lock-check = { cmd = "uv lock --check", help = "Lockfile is in sync with pyproject" }
audit = { cmd = "uv audit", help = "Dependency vulnerability audit" }
security = { cmd = "uv run --with bandit bandit -q -r vspeech gui", help = "Security lint (bandit, project interpreter)" }
deadcode = { cmd = "uv run --with vulture vulture vspeech --min-confidence 80", help = "Dead-code scan (advisory)" }

# Complexity insight (advisory; separate from the health gates above) — driven by the
# `code-metrics` skill. Shells out to `uvx lizard` + `uvx complexipy`, plus an in-process
# beniget DepDegree (def-use coupling) lens that catches entangled mutable state:
#   uv run poe metrics          → ranked refactor candidates (cyclomatic + cognitive + dep)
#   uv run poe metrics --json   → machine-readable
metrics = { cmd = "python scripts/metrics.py", help = "Rank refactor candidates: lizard CCN + complexipy cognitive + beniget DepDegree (advisory)" }

# Startup profiling (advisory) — driven by the `startup-profile` skill. Shells out to
# `uvx py-spy`; the analyzer is pure stdlib. Capture auto-analyzes inline:
#   uv run poe startup-profile                    → profile the baseline (all workers off) + rank buckets
#   uv run poe startup-profile --config <file>    → profile a real config instead
#   uv run poe startup-sweep                      → baseline + one config per worker, with a comparison table
#   uv run poe startup-analyze -- --input <file>  → re-rank an existing speedscope profile (by bucket)
startup-profile = { cmd = "python scripts/startup_capture.py", help = "Capture+analyze a py-spy startup profile of vspeech (advisory)" }
startup-sweep = { cmd = "python scripts/startup_capture.py --sweep", help = "Profile baseline + each worker and compare startup cost (advisory)" }
startup-analyze = { cmd = "python scripts/startup_analyze.py", help = "Rank startup time by bucket from a speedscope profile (advisory)" }

[tool.poe.tasks.fix]
help = "Auto-apply mechanical fixes (ruff format + safe lint fixes)"
sequence = ["fmt", "lint-fix"]
default_item_type = "ref"

[tool.poe.tasks.check]
help = "Run every health gate report-only; keeps going if one fails, exits non-zero if any did"
sequence = [
    "fmt-check",
    "lint",
    "type",
    "test",
    "lock-check",
    "audit",
    "security",
    "deadcode",
]
default_item_type = "ref"
ignore_fail = "return_non_zero"
