[project]
name = "voicerecog"
version = "0.1.0"
description = ""
authors = [{ name = "sondeko", email = "sondeko143@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-cloud-translate>=3.11.1,<4",
    "httpx>=0.28.0,<0.29.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "aiofiles>=23.1.0,<24",
    "pyhumps>=3.8.0,<4",
    "google-cloud-speech>=2.19.0,<3",
    "toml>=0.10.2,<0.11",
    "click>=8.1.3,<9",
    "vstreamer-protos",
    "colorlog>=6.7.0,<7",
    "emoji>=2.6.0,<3",
    "ctranslate2>=4.6.1,<5",
]

[project.optional-dependencies]
# marker は付けない。extra 側で platform を絞ると `uv export --extra voicevox` が
# requirements-pod.txt から voicevox-core ごと落とし、Docker イメージが
# `import voicevox_core` で死ぬ。platform ごとの wheel は [tool.uv.sources] で出し分ける。
voicevox = ["voicevox-core"]
whisper = [
    "faster-whisper==1.2.1",
    "torch ; sys_platform == 'win32'",
    # <1.27: 1.27.0 は CUDA 13 化で torch +cu128 と衝突 (roadmap フェーズ2)。
    "onnxruntime-gpu>=1.24.4,<1.27",
    "numpy>=2,<3",
]
rvc = [
    "torch ; sys_platform == 'win32'",
    "pyworld>=0.3.3,<0.4",
    "faiss-cpu>=1.7.2,<2 ; sys_platform == 'win32'",
    # <1.27: 1.27.0 は CUDA 13 化で torch +cu128 と衝突 (roadmap フェーズ2)。
    "onnxruntime-gpu>=1.24.4,<1.27",
    "torchaudio ; sys_platform == 'win32'",
    "numpy>=2,<3",
    "scipy>=1.10.1,<2",
]
mozc = ["mozcpy>=0.1.1,<0.2"]
vroid2 = ["pyvcroid2 ; sys_platform == 'win32'"]
audio = ["PyAudio>=0.2.13,<0.3"]
gui = [
    "ttkbootstrap>=1.10.1,<2",
    "pillow>=12.1.1,<13",
]

[project.urls]
Repository = "https://github.com/sondeko143/vstreamer-tool"

[project.scripts]
vspeech = "vspeech.main:cmd"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "docutils>=0.19,<0.20",
    "pytest-cov>=6.0.0,<8",
    "pytest-grpc>=0.8.0,<0.9",
    "pytest-asyncio>=1.0,<2",
    "pytest-httpx",
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "poethepoet>=0.46.0",
    "beniget>=0.5.0",
    "onnx>=1.19,<2",
]

[tool.uv]
default-groups = "all"
# voicevox-core / torch / torchaudio / pyvcroid2 are Windows-only wheels,
# and onnxruntime-gpu has no macOS wheel. Restrict resolution to the platforms this
# project actually targets (Windows for dev, Linux for the Docker image).
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]
# faster-whisper depends on the CPU `onnxruntime`, which shares the same `onnxruntime`
# module with `onnxruntime-gpu` and clobbers its CUDA-enabled binary when both are
# installed. Drop the CPU build entirely; `onnxruntime-gpu` (in the whisper/rvc extras)
# provides the `onnxruntime` module that faster-whisper imports.
override-dependencies = ["onnxruntime ; sys_platform == 'never'"]

[tool.uv.sources]
vstreamer-protos = { url = "https://github.com/sondeko143/vstreamer-protos/releases/download/v0.1.1/vstreamer_protos-0.1.1-py3-none-any.whl" }
voicevox-core = [
    { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-manylinux_2_34_x86_64.whl", marker = "sys_platform == 'linux'" },
]
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.10.0%2Bcu128-cp312-cp312-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu128/torchaudio-2.10.0%2Bcu128-cp312-cp312-win_amd64.whl" }
pyvcroid2 = { git = "https://github.com/Nkyoku/pyvcroid2" }

[tool.uv.build-backend]
module-name = ["vspeech"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"
addopts = "-m 'not voicevox_e2e'"
markers = [
    "voicevox_e2e: VOICEVOX 実合成 E2E（実行時資産が必要。通常実行では除外）",
]

[tool.coverage.run]
# PEP 669 の sys.monitoring で計測する (3.12 以降でのみ選べる)。C トレーサと同じ数字が
# 出て、オーバーヘッドは 1/3 になる (このスイートで +7.9s -> +2.7s)。
# 環境変数 COVERAGE_CORE が指定されていればそちらが優先される。
core = "sysmon"

[tool.ty.environment]
python-version = "3.12"

# scripts/convert_hubert.py と scripts/export_hubert_onnx.py はオフライン専用ツール。
# その依存 (fairseq / transformers / onnx / safetensors) は poe task の `uv run --with`
# が一時環境で供給するので、プロジェクト依存ではない。未解決 import はここでは正常な
# 状態であって、`python-health` が禁じる「extras 未同期による偽陽性の抑制」ではない。
[[tool.ty.overrides]]
include = ["scripts/convert_hubert.py", "scripts/export_hubert_onnx.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

# Health gates, run via poethepoet. The `python-health` skill drives these:
#   uv run poe check   → run every gate report-only (keeps going on failure)
#   uv run poe fix     → apply only the mechanical fixes (ruff format + safe lint)
# On GPU/ML projects, prefix with extras so ty/pytest resolve optional backends:
#   uv run --all-extras poe check
[tool.poe.tasks]
fmt = { cmd = "ruff format .", help = "Apply ruff formatting" }
fmt-check = { cmd = "ruff format --check .", help = "Check formatting (no writes)" }
lint = { cmd = "ruff check .", help = "Lint (no writes)" }
lint-fix = { cmd = "ruff check --fix .", help = "Apply safe lint fixes" }
type = { cmd = "ty check", help = "Type-check (ty)" }
test = { cmd = "pytest --cov=vspeech --cov-report=term-missing", help = "Tests + coverage (honors addopts)" }
lock-check = { cmd = "uv lock --check", help = "Lockfile is in sync with pyproject" }
audit = { cmd = "uv audit", help = "Dependency vulnerability audit" }
security = { cmd = "uv run --with bandit bandit -q -r vspeech gui", help = "Security lint (bandit, project interpreter)" }
deadcode = { cmd = "uv run --with vulture vulture vspeech --min-confidence 80", help = "Dead-code scan (advisory)" }

# 一度きりのオフライン工程。依存 (fairseq / transformers / onnx / onnxscript) は
# pyproject にも uv.lock にも載せず、`uv run --with` の一時環境で供給する。
# `poe security` / `poe deadcode` と同じ手口。
#
# convert-hubert: hubert_base.pt -> hubert_contentvec/ (transformers 資産)。
#   `--python 3.11` は必須。省くとプロジェクトの 3.12 に落ち、cp311 の fairseq wheel が
#   入らない。`--no-project` なので [tool.uv.sources] は読まれず、torch は PyPI 版
#   (Windows は CPU) になる。変換は CPU で足りるのでこれでよい。
#   例: uv run poe convert-hubert --input ~/.config/vstreamer/hubert_base.pt \
#           --output ./hubert_contentvec --golden ./hubert_golden
convert-hubert = { cmd = "uv run --isolated --no-project --python 3.11 --with 'fairseq @ https://github.com/sondeko143/fairseq-311/releases/download/v0.12.2.post1/fairseq-0.12.2.post1-cp311-cp311-win_amd64.whl' --with 'numpy<1.24' --with torch --with transformers python -m scripts.convert_hubert", help = "hubert_base.pt -> transformers 資産 (offline, 3.11 使い捨て環境)" }
# export-hubert-onnx: hubert_contentvec/ -> hubert_fp32.onnx + hubert_fp16.onnx。
#   `--no-project` は付けない。fp16 を CUDA 上で export するためプロジェクト環境の
#   cu128 torch が要る。
#   例: uv run poe export-hubert-onnx --asset ./hubert_contentvec --golden ./hubert_golden
export-hubert-onnx = { cmd = "uv run --with transformers --with onnx --with onnxscript python -m scripts.export_hubert_onnx", help = "transformers 資産 -> ONNX (offline, プロジェクト環境 + overlay)" }

# Complexity insight (advisory; separate from the health gates above) — driven by the
# `code-metrics` skill. Shells out to `uvx lizard` + `uvx complexipy`, plus an in-process
# beniget DepDegree (def-use coupling) lens that catches entangled mutable state:
#   uv run poe metrics          → ranked refactor candidates (cyclomatic + cognitive + dep)
#   uv run poe metrics --json   → machine-readable
metrics = { cmd = "python scripts/metrics.py", help = "Rank refactor candidates: lizard CCN + complexipy cognitive + beniget DepDegree (advisory)" }

# Startup profiling (advisory) — driven by the `startup-profile` skill. Shells out to
# `uvx py-spy`; the analyzer is pure stdlib. Capture auto-analyzes inline:
#   uv run poe startup-profile                    → profile the baseline (all workers off) + rank buckets
#   uv run poe startup-profile --config <file>    → profile a real config instead
#   uv run poe startup-sweep                      → baseline + one config per worker, with a comparison table
#   uv run poe startup-analyze -- --input <file>  → re-rank an existing speedscope profile (by bucket)
startup-profile = { cmd = "python scripts/startup_capture.py", help = "Capture+analyze a py-spy startup profile of vspeech (advisory)" }
startup-sweep = { cmd = "python scripts/startup_capture.py --sweep", help = "Profile baseline + each worker and compare startup cost (advisory)" }
startup-analyze = { cmd = "python scripts/startup_analyze.py", help = "Rank startup time by bucket from a speedscope profile (advisory)" }

[tool.poe.tasks.fix]
help = "Auto-apply mechanical fixes (ruff format + safe lint fixes)"
sequence = ["fmt", "lint-fix"]
default_item_type = "ref"

[tool.poe.tasks.check]
help = "Run every health gate report-only; keeps going if one fails, exits non-zero if any did"
sequence = [
    "fmt-check",
    "lint",
    "type",
    "test",
    "lock-check",
    "audit",
    "security",
    "deadcode",
]
default_item_type = "ref"
ignore_fail = "return_non_zero"
