[project]
name = "voicerecog"
version = "0.1.0"
description = ""
authors = [{ name = "sondeko", email = "sondeko143@gmail.com" }]
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-cloud-translate>=3.11.1,<4",
    "httpx>=0.28.0,<0.29.0",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "aiofiles>=23.1.0,<24",
    "pyhumps>=3.8.0,<4",
    "google-cloud-speech>=2.19.0,<3",
    "toml>=0.10.2,<0.11",
    "click>=8.1.3,<9",
    "vstreamer-protos",
    "colorlog>=6.7.0,<7",
    "emoji>=2.6.0,<3",
    "ctranslate2>=4.6.1,<5",
    # obs-websocket 5.x クライアント (ADR-0043)。依存ゼロ。websockets の API 変更
    # (websockets.client.connect -> websockets.asyncio.client.connect) の影響は
    # lib/obs_ws.py に閉じ込める。
    "websockets>=14,<17",
    # 3.13+ で stdlib から外れる audioop の後方移植 (C ポート)。recording/playback/vc の
    # 音量・dBFS 経路が `import audioop` のまま、飽和セマンティクスを保ったまま動く。
    "audioop-lts ; python_version >= '3.13'",
]

[project.optional-dependencies]
# marker は付けない。extra 側で platform を絞ると `uv export --extra voicevox` が
# requirements-pod.txt から voicevox-core ごと落とし、Docker イメージが
# `import voicevox_core` で死ぬ。platform ごとの wheel は [tool.uv.sources] で出し分ける。
voicevox = ["voicevox-core"]
whisper = [
    "faster-whisper==1.2.1",
    "torch==2.10.0 ; sys_platform == 'win32'",
    # >=1.27: CUDA 13 (nvidia-*-cu13) を採用し torch +cu130 と揃える (roadmap フェーズ2)。
    "onnxruntime-gpu>=1.27,<2",
    "numpy>=2,<3",
]
rvc = [
    "torch==2.10.0 ; sys_platform == 'win32'",
    # pyworld (dio/harvest の f0 抽出) は runtime 依存から外した: cp314 wheel が無く、
    # 既定は rmvpe。dio/harvest を使う場合のみ手動導入 (`uv pip install pyworld`)。
    # pitch_extract.py が遅延 import する。
    "faiss-cpu>=1.7.2,<2 ; sys_platform == 'win32'",
    # >=1.27: CUDA 13 (nvidia-*-cu13) を採用し torch +cu130 と揃える (roadmap フェーズ2)。
    "onnxruntime-gpu>=1.27,<2",
    "torchaudio==2.10.0 ; sys_platform == 'win32'",
    "numpy>=2,<3",
    "scipy>=1.10.1,<2",
]
mozc = ["mozcpy>=0.1.1,<0.2"]
vroid2 = ["pyvcroid2 ; sys_platform == 'win32'"]
# sounddevice: PortAudio 同梱の py3-none wheel (ABI 非依存) なので cp314 でも wheel が入る。
# PyAudio は cp314 wheel が無く sdist ビルドに PortAudio が要る (roadmap フェーズ3 で移行)。
audio = ["sounddevice>=0.5,<0.6"]
gui = [
    "ttkbootstrap>=1.10.1,<2",
    "pillow>=12.1.1,<13",
    "platformdirs>=4,<5",
]

[project.urls]
Repository = "https://github.com/sondeko143/vstreamer-tool"

[project.scripts]
vspeech = "vspeech.main:cmd"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10",
    "docutils>=0.19,<0.20",
    "pytest-cov>=6.0.0,<8",
    "pytest-grpc>=0.8.0,<0.9",
    "pytest-asyncio>=1.0,<2",
    "pytest-httpx",
    "ruff>=0.15.17",
    "ty>=0.0.49",
    "poethepoet>=0.46.0",
    "beniget>=0.5.0",
    "onnx>=1.19,<2",
]

[tool.uv]
default-groups = "all"
# voicevox-core / torch / torchaudio / pyvcroid2 are Windows-only wheels,
# and onnxruntime-gpu has no macOS wheel. Restrict resolution to the platforms this
# project actually targets (Windows for dev, Linux for the Docker image).
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]
# faster-whisper depends on the CPU `onnxruntime`, which shares the same `onnxruntime`
# module with `onnxruntime-gpu` and clobbers its CUDA-enabled binary when both are
# installed. Drop the CPU build entirely; `onnxruntime-gpu` (in the whisper/rvc extras)
# provides the `onnxruntime` module that faster-whisper imports.
override-dependencies = ["onnxruntime ; sys_platform == 'never'"]

# explicit=true が肝。外すと PyTorch index が全依存の探索対象になり、そこに mirror されて
# いる numpy/pillow まで cu130 側から解決され得る。名指しした torch/torchaudio だけに限定する。
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
vstreamer-protos = { url = "https://github.com/sondeko143/vstreamer-protos/releases/download/v0.1.1/vstreamer_protos-0.1.1-py3-none-any.whl" }
voicevox-core = [
    { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-win_amd64.whl", marker = "sys_platform == 'win32'" },
    { url = "https://github.com/VOICEVOX/voicevox_core/releases/download/0.16.4/voicevox_core-0.16.4-cp310-abi3-manylinux_2_34_x86_64.whl", marker = "sys_platform == 'linux'" },
]
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
pyvcroid2 = { git = "https://github.com/Nkyoku/pyvcroid2" }

[tool.uv.build-backend]
module-name = ["vspeech"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"
addopts = "-m 'not voicevox_e2e'"
markers = [
    "voicevox_e2e: VOICEVOX 実合成 E2E（実行時資産が必要。通常実行では除外）",
]

[tool.coverage.run]
# PEP 669 の sys.monitoring で計測する (3.12 以降でのみ選べる)。C トレーサと同じ数字が
# 出て、オーバーヘッドは 1/3 になる (このスイートで +7.9s -> +2.7s)。
# 環境変数 COVERAGE_CORE が指定されていればそちらが優先される。
core = "sysmon"

[tool.ty.environment]
python-version = "3.14"

# scripts/convert_hubert.py と scripts/export_hubert_onnx.py はオフライン専用ツール。
# その依存 (fairseq / transformers / onnx / safetensors) は poe task の `uv run --with`
# が一時環境で供給するので、プロジェクト依存ではない。未解決 import はここでは正常な
# 状態であって、`python-health` が禁じる「extras 未同期による偽陽性の抑制」ではない。
[[tool.ty.overrides]]
include = [
    "scripts/convert_hubert.py",
    "scripts/export_hubert_onnx.py",
    "scripts/export_fcpe_onnx.py",
]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

# Task automation lives in poe_tasks.toml (included below), kept out of this file
# so pyproject stays focused on package metadata. The former Makefile targets
# (requirements-pod / voicevox-assets / clean) were folded into poe there too.
# Run any task via `uv run poe <task>`; `uv run poe` with no task lists them all.
[tool.poe]
include = ["poe_tasks.toml"]
